--- a/.github/workflows/master_libertytest-viva.yml
+++ b/.github/workflows/master_libertytest-viva.yml
@@ -28,7 +28,7 @@ jobs:
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./dist
+        run: zip release.zip ./* ./dist/*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -67,5 +67,5 @@ jobs:
         with:
           app-name: 'libertytest-viva'
           slot-name: 'Production'
-          package: .
+          package: ./dist
           
