--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "libertymedia homepage",
   "scripts": {
     "build": "webpack --mode=production",
-    "dev": "webpack serve --mode=development",
-    "start": "nodemon ./dist/main.js"
+    "dev": "webpack serve --mode=development"
   },
   "type": "module",
   "repository": {
