--- a/.github/workflows/master_libertytest-viva.yml
+++ b/.github/workflows/master_libertytest-viva.yml
@@ -67,5 +67,5 @@ jobs:
         with:
           app-name: 'libertytest-viva'
           slot-name: 'Production'
-          package: .
+          package: ./dist
           
