--- a/package.json
+++ b/package.json
@@ -1,52 +1,40 @@
 {
   "name": "libertymedia",
   "version": "0.1.0",
-  "description": "libertymedia homepage",
-  "scripts": {
-    "build": "webpack --mode=production",
-    "dev": "webpack serve --mode=development"
-  },
+  "description": "libertymedia project",
+  "main": "index.js",
   "type": "module",
+  "scripts": {
+    "test": "jest",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Xen-alpha/libertymedia-homepage.git"
+    "url": "git+https://github.com/Xen-alpha/libertymedia.git"
   },
   "keywords": [
     "js",
     "react",
-    "frontend"
+    "express.js",
+    "libertygame",
+    "libertybook"
   ],
   "author": "Xen-alpha",
-  "license": "MIT",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Xen-alpha/libertymedia-homepage/issues"
+    "url": "https://github.com/Xen-alpha/libertymedia/issues"
   },
-  "homepage": "https://github.com/Xen-alpha/libertymedia-homepage#readme",
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.4",
-    "@babel/preset-react": "^7.24.7",
-    "@eslint/compat": "^1.1.1",
-    "@eslint/js": "^9.9.1",
-    "babel-loader": "^9.1.3",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react": "^7.35.0",
-    "globals": "^15.9.0",
-    "html-webpack-plugin": "^5.6.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.4",
-    "nodemon-webpack-plugin": "^4.8.2",
-    "npm-run-all": "^4.1.5",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
-  },
+  "homepage": "https://github.com/Xen-alpha/libertymedia#readme",
   "dependencies": {
-    "create-react-app": "^1.2.1",
-    "css-loader": "^7.1.2",
+    "express": "^4.19.2",
     "libertymedia": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "style-loader": "^4.0.0"
+    "react-router-dom": "^6.26.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4"
   }
 }
