--- a/.github/workflows/master_libertytest-viva.yml
+++ b/.github/workflows/master_libertytest-viva.yml
@@ -24,11 +24,11 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* ./dist/*
+        run: |
+          cp ./index.js ./dist/index.js
+          zip release.zip ./dist/*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
