--- a/.github/workflows/master_libertytest-viva.yml
+++ b/.github/workflows/master_libertytest-viva.yml
@@ -47,7 +47,7 @@ jobs:
 
     steps:
       - name: Delete previous builds
-        run: rm -r ./*
+        run: rm ./*.*
 
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
