--- a/.github/workflows/master_libertytest-viva.yml
+++ b/.github/workflows/master_libertytest-viva.yml
@@ -67,4 +67,4 @@ jobs:
         with:
           app-name: "libertytest-viva"
           slot-name: "Production"
-          package: .
+          package: ./dist
