--- a/.github/workflows/master_libertymedia.yml
+++ b/.github/workflows/master_libertymedia.yml
@@ -60,9 +60,4 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3E82F265DBF1460E825FC5B67C38E2FE }}
 
       - name: "Deploy to Azure Web App"
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: "libertymedia"
-          slot-name: "Production"
-          package: .
+        run: nodemon index.js
