--- a/package.json
+++ b/package.json
@@ -1,38 +1,16 @@
 {
-  "name": "libertymedia",
-  "version": "0.1.0",
-  "description": "libertymedia project",
-  "main": "index.js",
-  "type": "module",
+  "name": "libertymedia-backend",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "build": "nodemon index.js"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Xen-alpha/libertymedia.git"
-  },
-  "keywords": [
-    "js",
-    "react",
-    "express.js",
-    "libertygame",
-    "libertybook"
-  ],
-  "author": "Xen-alpha",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Xen-alpha/libertymedia/issues"
-  },
-  "homepage": "https://github.com/Xen-alpha/libertymedia#readme",
   "dependencies": {
-    "express": "^4.19.2",
-    "libertymedia": "file:",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.4"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1"
   }
 }
