--- a/.github/workflows/master_libertymedia.yml
+++ b/.github/workflows/master_libertymedia.yml
@@ -24,6 +24,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
+          npm run build --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./*
@@ -59,5 +60,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_1E51DA0540BD4AB6A491B1DA2D1560C4 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3E82F265DBF1460E825FC5B67C38E2FE }}
 
-      - name: "Deploy to Azure Web App"
-        run: nodemon index.js
+      - name: 'Deploy to Azure Web App'
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'libertymedia'
+          slot-name: 'Production'
+          package: .
