--- a/package.json
+++ b/package.json
@@ -1,16 +1,54 @@
 {
-  "name": "libertymedia-backend",
-  "version": "0.0.0",
-  "private": true,
+  "name": "libertymedia-front",
+  "version": "0.1.0",
+  "description": "libertymedia homepage frontend with React",
   "scripts": {
-    "start": "node ./bin/www"
+    "build": "webpack --mode=production",
+    "dev": "webpack serve --mode=development"
+  },
+  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Xen-alpha/libertymedia-homepage.git"
+  },
+  "keywords": [
+    "js",
+    "react",
+    "frontend"
+  ],
+  "author": "Xen-alpha",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Xen-alpha/libertymedia-homepage/issues"
+  },
+  "homepage": "https://github.com/Xen-alpha/libertymedia-homepage#readme",
+  "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@eslint/compat": "^1.1.1",
+    "@eslint/js": "^9.9.1",
+    "babel-loader": "^9.1.3",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
+    "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "nodemon-webpack-plugin": "^4.8.2",
+    "npm-run-all": "^4.1.5",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "@babel/register": "^7.24.6",
+    "create-react-app": "^1.2.1",
+    "css-loader": "^7.1.2",
+    "libertymedia": "file:",
+    "libertymedia-front": "file:",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "style-loader": "^4.0.0"
   }
 }
