--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-loader": "^9.1.3",
     "eslint": "^9.9.1",
     "eslint-plugin-react": "^7.35.0",
+    "file-loader": "^6.2.0",
     "globals": "^15.9.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
