--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "description": "libertymedia homepage frontend with React",
   "scripts": {
-    "build": "webpack --mode=production",
-    "dev": "webpack serve --mode=development"
+    "build": "webpack",
+    "dev": "webpack serve"
   },
   "type": "module",
   "repository": {
@@ -28,6 +28,7 @@
     "@babel/preset-react": "^7.24.7",
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.9.1",
+    "@testing-library/react": "^16.0.1",
     "babel-loader": "^9.1.3",
     "eslint": "^9.9.1",
     "eslint-plugin-react": "^7.35.0",
