--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "libertymedia homepage frontend with React",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack serve"
+    "dev": "webpack serve --mode development --watch"
   },
   "type": "module",
   "repository": {
@@ -30,6 +30,7 @@
     "@eslint/js": "^9.9.1",
     "@testing-library/react": "^16.0.1",
     "babel-loader": "^9.1.3",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^9.9.1",
     "eslint-plugin-react": "^7.35.0",
     "file-loader": "^6.2.0",
@@ -39,6 +40,7 @@
     "nodemon": "^3.1.4",
     "nodemon-webpack-plugin": "^4.8.2",
     "npm-run-all": "^4.1.5",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
