--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "libertymedia-front": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "style-loader": "^4.0.0"
   }
 }
